[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
renderer = { path = "../renderer" } # This links your library
pixels = "0.13"                      # Hardware-accelerated pixel buffer
winit = "0.29"                       # Cross-platform window handling
wasm-bindgen = "0.2"                 # Essential for the Web version
